  FireBee. (VRI)
- bios/ide.c: Set a maximum of two IDE interfaces for FireBee. (RFB)
- bios/bios.c: Fixed implicit declaration of firebee_shutdown(). (RFB)

2013-12-24
- bios/linea.S bios/lineavars.S vdi/vdi_defs.h vdi/vdi_line.c vdi/vdi_raster.c:
  Added support for "Copy raster form". Contributed by Eero Tamminen. (VRI)

2013-12-31
- bios/ide.c: Disable IDE multi-sector i/o (causes problems with some
  CF cards). (RFB)

2014-01-01
- aes/gemgsxif.c aes/gsx2.c aes/gsx2.h Makefile: Converted gsx2.S to C, and
  added d2/a2 to the VDI trap clobber list. This makes EmuTOS compatible
  with fVDI's v_hide_c() and v_show_c() which clobbers d2. (VRI)
- *: Replaced asm by __asm__, inline by __inline__ and __volatile__ to volatile
  to be more compliant with the standards. (VRI)

2014-01-02
- aes/gemgraf.c aes/gemgsxif.c aes/gemgsxif.h: Get the correct number of planes
  from the VDI workstation. This fixes the menu with fVDI 32-bit modes. (VRI)
- aes/gemgraf.c desk/deskgraf.c include/gsxdefs.h: Removed unused gl_nrows and
  gl_ncols variables. (VRI)

2014-01-03
- bios/ide.c: Fix some debugging messages. (RFB)

2014-01-07
- bios/ide.c: Fix obscure bug detected by code inspection. (RFB)

2014-01-08
- bios/ide.c: Fixed IDE regression on Amiga. 32-bit access is unsupported. (VRI)

2014-01-09
- bios/blkdev.c bios/disk.c bios/floppy.c: Small refactoring of media
  change detection. (RFB)

2014-01-09
- bios/blkdev.c bios/blkdev.h bios/ide.c bios/sd.c: Refactor media change
  code to simplify future updates. (RFB)

2014-01-09
- bios/blkdev.c: Replaced DBG_BLKDEV with KDEBUG. (RFB)

2014-01-13
- bios/floppy.c: Replaced DBG_FLOP with KDEBUG. (RFB)

2014-01-16
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/disk.h: Refactor partition
  detection for future media change update. (RFB)

2014-01-20
- bios/disk.c: Code cleanup: use MBR definition rather than hardcoded
  offsets. (RFB)
- bios/blkdev.c bios/blkdev.h bios/disk.c: Improve detection of FAT12 /
  FAT16 / FAT32 partitions. (RFB)